--- a/src/main/resources/common/jdbc.properties
+++ b/src/main/resources/common/jdbc.properties
@@ -1,5 +1,6 @@
+#allowMultiQueries可以允许一次执行多条SQL语句
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/cvss?verifyServerCertificate=false&useSSL=true
+jdbc.url=jdbc:mysql://127.0.0.1:3306/cvss?verifyServerCertificate=false&useSSL=true&characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=123456
 jdbc.filters: stat
